fixes flex alignment issue in IE with new image download toggles

--- a/packages/cms/src/components/Viz/Options.css
+++ b/packages/cms/src/components/Viz/Options.css
@@ -66,6 +66,7 @@
         }
       }
       & .image-options {
+        align-items: center;
         display: flex;
         flex-direction: column;
         & .pt-checkbox {
